# quandary

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
src/: class.rs  lib.rs  thread.rs  util.rs
src/db/: catalog.rs  error.rs  mod.rs  rrset.rs  single_zone_catalog.rs
src/db/hash_map_tree/: catalog.rs  mod.rs  node.rs  zone.rs
src/db/zone/: mod.rs  validation.rs
src/io/: blocking.rs  mod.rs  tokio.rs
src/io/socket/: mod.rs  std_tcp.rs  std_udp.rs  unix_tcp.rs  unix_udp_localaddr.rs
src/message/: constants.rs  mod.rs  opcode.rs  question.rs  rcode.rs  reader.rs  tsig.rs  writer.rs
src/name/: builder.rs  error.rs  label.rs  lowercase.rs  mod.rs  wire.rs
src/rr/: cmp.rs  fmt.rs  ipv6.rs  mod.rs  rdata_set.rs  rr_type.rs  rrset.rs  srv.rs  std13.rs  ttl.rs
src/rr/rdata/: helpers.rs  ipv6.rs  mod.rs  opt.rs  srv.rs  std13.rs  tsig.rs
src/server/: mod.rs  query.rs  rrl.rs
src/zone/: catalog.rs  error.rs  lookup.rs  mod.rs  node.rs  validation.rs
src/zone_file/: character_string.rs  directive.rs  error.rs  escape.rs  mod.rs  name.rs  reader.rs  record.rs
src/zone_file/fs/: error.rs  mod.rs
