[package]
name = "quandary"
version = "0.1.0"
authors = ["Matthew Ingwersen <matttpt@gmail.com>"]
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
arrayvec = "0.7"
log = "0.4"
rand = "0.8"
slab = "0.4"

[target."cfg(unix)".dependencies]
nix = { version = "0.24", default-features = false, features = ["poll"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nix = { version = "0.24", default-features = false, features = ["net", "socket", "uio"] }

[dev-dependencies]
lazy_static = "1.4"
