[package]
name = "quandary"
version = "0.1.0"
authors = ["Matthew Ingwersen <matttpt@gmail.com>"]
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

[[bin]]
name = "quandaryd"
required-features = ["binary"]

[features]
default = ["binary"]
binary = [
    "dep:anyhow",
    "dep:clap",
    "dep:env_logger",
    "dep:paste",
    "dep:base64",
    "dep:serde",
    "dep:signal-hook",
    "dep:toml",
]

[dependencies]
arrayvec = "0.7"
hmac = "0.12"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
sha1 = { version = "0.10", features = ["asm"] }
sha2 = { version = "0.10", features = ["asm"] }
slab = "0.4"

# Optional dependencies for the binary:
anyhow = { version = "1.0", optional = true }
base64 = { version = "0.21", optional = true }
clap = { version = "4", optional = true, features = ["derive"] }
env_logger = { version = "0.10", optional = true }
paste = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
signal-hook = { version = "0.3", optional = true }
toml = { version = "0.5", optional = true }

[target."cfg(unix)".dependencies]
nix = { version = "0.26", default-features = false, features = ["poll"] }

[target.'cfg(any(target_os = "linux", target_os = "netbsd", target_os = "freebsd"))'.dependencies]
cfg-if = "1"
libc = "0.2"
nix = { version = "0.26", default-features = false, features = ["net", "socket", "uio"] }
